testdata/bad/timestamp_31.ion
2004-12-11T12:10+10:100
